# UnityVecEnv

./: .gitignore  README.md
Protobuf/: communication.proto  generate_protos.ps1  generate_protos.sh
Python/unity_vecenv/: pyproject.toml
Python/unity_vecenv/src/unity_vecenv/environment/: __init__.py  network_utils.py  protocol_constants.py  spaces.py  unity_client.py  unity_inference_engine_export.py  unity_multi_vec_env.py  unity_process.py  unity_vector_env.py
Python/unity_vecenv/src/unity_vecenv/onnx_utilities/: __init__.py  onnx_exporter.py  onnx_rename.py  unity_inference_engine_export.py
Python/unity_vecenv/src/unity_vecenv/protobuf_gen/: communication_pb2.py  communication_pb2.pyi
Python/unity_vecenv/tests/: cleanrl.py  test_main.py
Unity/: package.json
Unity/Editor/Scripts/: GymAgentEditor.cs
Unity/Runtime/: MKA.GymVecEnv.asmdef
Unity/Runtime/Plugins/Google.Protobuf.3.33.4/: Google.Protobuf.nuspec
Unity/Runtime/Plugins/Google.Protobuf.3.33.5/: .signature.p7s
Unity/Runtime/Scripts/: FlyCamera.cs
Unity/Runtime/Scripts/ProtobufGenerated/: Communication.cs  README.md
Unity/Runtime/Scripts/VecEnv/: Extensions.cs  ScreenshotManager.cs
Unity/Runtime/Scripts/VecEnv/Core/: AgentAndManagerSpawner.cs  AgentSpawner.cs  Bootstrap.cs  ExternalAgent.cs  GymAgent.cs  GymAgentManager.cs  GymVecEnvManager.cs
Unity/Runtime/Scripts/VecEnv/Inference/: InferenceHelper.cs
Unity/Runtime/Scripts/VecEnv/Message/: DefaultMessageMapper.cs  IMessageMapper.cs  Message.cs
Unity/Runtime/Scripts/VecEnv/Networking/: CommunicatorHttpServer.cs  IExternalCommunication.cs  NetworkUtils.cs
