[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unity-vecenv"
version = "0.0.1"
description = "Short description of my package"
readme = "README.md"
authors = [
    { name = "Mart Kartasev", email = "mart.kartasev@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [ # pip install -e UnityVecEnv/python/unity_vecenv/
    "numpy==1.23.5",
    "torch==2.2.2",
    "gymnasium==1.2.3",
    "tyro==1.0.5",
    "tensorboard",
    "requests",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff"
]
cuda118 = [ # pip install -e UnityVecEnv/python/unity_vecenv/[cuda118] --extra-index-url https://download.pytorch.org/whl/cu118
  "torch==2.1.2+cu118"
]
cuda121 = [ # pip install -e UnityVecEnv/python/unity_vecenv/[cuda121] --extra-index-url https://download.pytorch.org/whl/cu121
  "torch==2.2.2+cu121"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]